# H-Net-Mamba-ASR

./: .gitignore  README.md  TRAINING_SUMMARY.md  plan.md  pyproject.toml  requirements.txt  run_baseline_training.sh  run_hmamba_training_N2.sh  run_hmamba_training_N3.sh  run_hmamba_training_N4.sh
Mamba-ASR/: train_CTC.py  train_S2S.py  train_s2s_hmamba.py
configs/: lm_transformer_500.yaml  lm_transformer_750.yaml  typeA_small_N1.yaml  typeA_small_N1_ctc.yaml  typeA_small_N2.yaml
docs/: DC-ASR_experimental_plan.md  DC-ASR_research_proposal.md  baseline_reproduction.md  experimental_plan.md  hmamba_dynamic_chunking.md  research_proposal.md
logs/: conformer_L_CTC-6508915.err  conformer_L_CTC-6508915.out  conformer_L_CTC-6508919.err  conformer_L_CTC-6508919.out  conformer_L_CTC-6541320.err  conformer_L_CTC-6541320.out  conformer_L_CTC-6907548.err  conformer_L_CTC-6907548.out  conformer_L_S2S-6472999.err  conformer_L_S2S-6472999.out  conformer_L_S2S-6484204.err  conformer_L_S2S-6484204.out  conformer_S_S2S-6472996.out  conformer_S_S2S-6484205.out  conmamba_L_CTC-6473003.err  conmamba_L_CTC-6473003.out  conmamba_L_CTC-6484206.err  conmamba_L_CTC-6484206.out  conmamba_L_S2S-6473000.out  conmamba_L_S2S-6484207.err  conmamba_L_S2S-6484207.out  conmamba_S_S2S-6472997.out  conmamba_S_S2S-6484208.err  conmamba_S_S2S-6484208.out  conmambamamba_L_S2S-6473001.err  conmambamamba_L_S2S-6473001.out  conmambamamba_L_S2S-6484209.out  conmambamamba_S_S2S-6472998.out  conmambamamba_S_S2S-6484210.err  conmambamamba_S_S2S-6484210.out  eval_conformer_L_nolm-6515294.err  (+68 more)
scripts/: train.py  (+10 more)
(+146 files in other folders)
