[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "dcasr"
version = "0.0.1"
description = "Interpretable Hierarchical Speech Recognition via Dynamic Chunking (Mamba-H-Net ASR)"
requires-python = ">=3.10"
readme = "README.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
